# geneformer-scratch

./: .gitignore  README.md  pyproject.toml
configs/: config.yaml
notebooks/: experiment.ipynb
outputs/geneformer_distillation/2025-11-19_14-34-07/.hydra/: hydra.yaml
outputs/geneformer_distillation/2025-11-19_14-50-36/.hydra/: hydra.yaml
outputs/geneformer_distillation/2025-11-19_14-56-53/.hydra/: hydra.yaml
outputs/geneformer_distillation/2025-11-19_15-01-21/.hydra/: config.yaml  hydra.yaml
outputs/geneformer_distillation/2025-11-19_15-09-37/.hydra/: hydra.yaml
outputs/geneformer_distillation/2025-11-19_15-27-16/.hydra/: config.yaml  hydra.yaml
outputs/logs/: geneformer_distillation_20251121_155653_metrics.jsonl  geneformer_distillation_20251126_110400_metrics.jsonl  geneformer_distillation_20251126_112127_metrics.jsonl  geneformer_distillation_20251127_134038_metrics.jsonl  geneformer_distillation_20251210_171552_metrics.jsonl  geneformer_distillation_20251217_141100_metrics.jsonl
src/: main.py
src/data/: __init__.py  dataset.py  loaders.py  sampler.py  tokenizer.py
src/evals/: quick.py
src/model/: __init__.py  student_model.py  teacher_model.py
src/training/: accumulator.py  checkpointing.py  trainer.py
tests/: test_LGS.py
