[project]
name = "minigeneformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.3.0",
    "huggingface>=0.0.1",
    "huggingface-hub>=1.0.1",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "pyarrow>=22.0.0",
    "pytest>=8.4.2",
    "torch>=2.9.0",
]
